--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://adschristian.github.io/t02-website",
   "dependencies": {
+    "firebase": "^5.5.9",
     "gh-pages": "^2.0.1",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
